feat: dashboard and monthly plan
